# agent22-rust

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.js
.github/workflows/: release.yml
docs/: ARCHITECTURE.md
scripts/: download-sidecar.sh
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: analysis.rs  error.rs  lead.rs  lib.rs  main.rs  model.rs  sidecar.rs  state.rs
src-tauri/src/commands/: agents.rs  analysis.rs  chat.rs  daemon.rs  mod.rs  onboarding.rs  providers.rs  skills.rs  workflows.rs
src/components/: AnalysisTable.tsx  ChatMessage.tsx  FileUpload.tsx  LeadGate.tsx  ModelStatus.tsx  ShapleyChart.tsx
src/components/agents/: AgentCard.tsx  AgentChatPanel.tsx  CreateAgentDialog.tsx  ThinkingIndicator.tsx
src/components/common/: EmptyState.tsx  LoadingSpinner.tsx  StatusBadge.tsx
src/components/layout/: AppShell.tsx  Sidebar.tsx  TopBar.tsx
src/components/ui/: badge.tsx  button.tsx  dialog.tsx  select.tsx
src/components/workflows/: StepConfigPanel.tsx  WorkflowBuilder.tsx  WorkflowToolbar.tsx
src/components/workflows/nodes/: AgentNode.tsx  ConditionNode.tsx  OutputNode.tsx  TriggerNode.tsx
src/hooks/: use-agent-ws.ts  use-agents.ts  use-providers.ts  use-skills.ts  use-workflows.ts
src/lib/: api.ts  utils.ts
src/pages/: AgentDetail.tsx  AgentList.tsx  Agents.tsx  Chat.tsx  Dashboard.tsx  Onboarding.tsx  Settings.tsx  Skills.tsx  WorkflowDetail.tsx  Workflows.tsx
src/store/: app.ts  daemon-store.ts  ui-store.ts  workflow-builder-store.ts
src/types/: agent.ts  common.ts  provider.ts  skill.ts  workflow.ts
