[package]
name = "agent22"
version = "0.2.0"
description = "agent22 — local sales intelligence for GTM teams"
authors = []
license = ""
repository = ""
default-run = "agent22"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "agent22_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "agent22"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri              = { version = "2", features = [] }
tauri-plugin-store  = "2"
tauri-plugin-dialog = "2"
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
reqwest            = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
tokio              = { version = "1", features = ["full"] }
thiserror          = "2"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
csv                = "1.3"
rand               = "0.8"
futures-util       = "0.3"
encoding_rs        = "0.8"
llama-cpp-2        = "0.1"

[profile.release]
panic         = "abort"
codegen-units = 1
lto           = true
opt-level     = "s"
strip         = true
